@@ -85,6 +85,9 @@
      Use this queue to verify success or failure for remote forward
      establishment in a race free way.
      ok dtucker@
+   - djm@cvs.openbsd.org 2008/06/12 04:17:47
+     [clientloop.c]
+     thall shalt not code past the eightieth column
 
 20080611
  - (djm) [channels.c configure.ac]
@@ -4247,4 +4250,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4978 2008/06/12 18:50:27 dtucker Exp $
+$Id: ChangeLog,v 1.4979 2008/06/12 18:51:14 dtucker Exp $
